--- a/AzureADAuth/Web.config
+++ b/AzureADAuth/Web.config
@@ -9,6 +9,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="ida:ClientId" value="6835a7a2-9041-4faf-9c76-ae0a08befe4f" />
+	<add key="ida:Tenant" value="simpsonssimsogmail.onmicrosoft.com" />
+	<add key="ida:AADInstance" value="https://login.microsoftonline.com/{0}" />
+	<add key="ida:PostLogoutRedirectUri" value="https://localhost:44307/" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
